# vespertide

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  EXAMPLES.md  README.md  REFERENCE.md  SKILL.md  package.json  pr_description.md
crates/vespertide/: Cargo.toml
crates/vespertide-cli/: .gitignore  AGENTS.md  Cargo.toml  vespertide.json
crates/vespertide-cli/migrations/: 0001_test_message.json
crates/vespertide-cli/models/: test_table.json
crates/vespertide-cli/src/: main.rs  utils.rs
crates/vespertide-cli/src/commands/: diff.rs  export.rs  init.rs  log.rs  mod.rs  new.rs  revision.rs  sql.rs  status.rs
crates/vespertide-cli/tests/: integration_test.rs
crates/vespertide-config/: Cargo.toml
crates/vespertide-config/src/: config.rs  file_format.rs  lib.rs  name_case.rs
crates/vespertide-core/: AGENTS.md  Cargo.toml
crates/vespertide-core/src/: action.rs  lib.rs  migration.rs  schema.rs
crates/vespertide-core/src/schema/: column.rs  constraint.rs  foreign_key.rs  index.rs  mod.rs  names.rs  primary_key.rs  reference.rs  str_or_bool.rs  table.rs
crates/vespertide-exporter/: AGENTS.md  Cargo.toml
crates/vespertide-exporter/src/: lib.rs  orm.rs
crates/vespertide-exporter/src/seaorm/: mod.rs
crates/vespertide-exporter/src/snapshots/: vespertide_exporter__orm__tests__render_entity_snapshots@seaorm.snap  vespertide_exporter__orm__tests__render_entity_snapshots@sqlalchemy.snap  vespertide_exporter__orm__tests__render_entity_with_schema_snapshots@seaorm.snap  vespertide_exporter__orm__tests__render_entity_with_schema_snapshots@sqlmodel.snap
crates/vespertide-exporter/src/sqlalchemy/: mod.rs
crates/vespertide-exporter/src/sqlmodel/: mod.rs
crates/vespertide-macro/: Cargo.toml
crates/vespertide-macro/src/: lib.rs  loader.rs  options.rs  runtime.rs
crates/vespertide-naming/: Cargo.toml
crates/vespertide-naming/src/: lib.rs
crates/vespertide-planner/: AGENTS.md  Cargo.toml
crates/vespertide-planner/src/: apply.rs  diff.rs  error.rs  lib.rs  plan.rs  schema.rs  validate.rs
crates/vespertide-planner/src/snapshots/: vespertide_planner__diff__tests__diff_tables__create_table_with_inline_index.snap  vespertide_planner__diff__tests__diff_tables__diff_tables@add_index.snap  vespertide_planner__diff__tests__diff_tables__diff_tables@add_named_index.snap  vespertide_planner__diff__tests__diff_tables__diff_tables@remove_index.snap  vespertide_planner__diff__tests__diff_tables__diff_tables@remove_named_index.snap  vespertide_planner__diff__tests__index__create_table_with_inline_index-2.snap  vespertide_planner__diff__tests__index__create_table_with_inline_index-2.snap.new
crates/vespertide-query/: AGENTS.md  Cargo.toml
crates/vespertide-query/src/: builder.rs  error.rs  lib.rs  sql.rs
crates/vespertide-query/src/snapshots/: vespertide_query__builder__tests__add_column_with_fk_and_index_pair@add_col_pair_fk_ix_mysql.snap  vespertide_query__builder__tests__add_column_with_fk_and_index_pair@add_col_pair_fk_ix_postgres.snap  vespertide_query__builder__tests__add_column_with_fk_and_index_pair@add_col_pair_fk_ix_sqlite.snap  vespertide_query__builder__tests__add_column_with_fk_and_index_pair@add_col_pair_ix_fk_mysql.snap  vespertide_query__builder__tests__add_column_with_fk_and_index_pair@add_col_pair_ix_fk_postgres.snap  vespertide_query__builder__tests__add_column_with_fk_and_index_pair@add_col_pair_ix_fk_sqlite.snap  vespertide_query__builder__tests__add_column_with_fk_and_unique_pair@add_col_pair_fk_uq_mysql.snap  vespertide_query__builder__tests__add_column_with_fk_and_unique_pair@add_col_pair_fk_uq_postgres.snap  vespertide_query__builder__tests__add_column_with_fk_and_unique_pair@add_col_pair_fk_uq_sqlite.snap  vespertide_query__builder__tests__add_column_with_fk_and_unique_pair@add_col_pair_uq_fk_mysql.snap  vespertide_query__builder__tests__add_column_with_fk_and_unique_pair@add_col_pair_uq_fk_postgres.snap  vespertide_query__builder__tests__add_column_with_fk_and_unique_pair@add_col_pair_uq_fk_sqlite.snap  vespertide_query__builder__tests__add_column_with_fk_no_duplicate_fk_in_temp_table@dup_fk_mysql.snap  vespertide_query__builder__tests__add_column_with_fk_no_duplicate_fk_in_temp_table@dup_fk_postgres.snap  vespertide_query__builder__tests__add_column_with_fk_no_duplicate_fk_in_temp_table@dup_fk_sqlite.snap  vespertide_query__builder__tests__add_column_with_fk_unique_index_all_orderings@add_col_fk_ix_uq_mysql.snap  vespertide_query__builder__tests__add_column_with_fk_unique_index_all_orderings@add_col_fk_ix_uq_postgres.snap  vespertide_query__builder__tests__add_column_with_fk_unique_index_all_orderings@add_col_fk_ix_uq_sqlite.snap  vespertide_query__builder__tests__add_column_with_fk_unique_index_all_orderings@add_col_fk_uq_ix_mysql.snap  vespertide_query__builder__tests__add_column_with_fk_unique_index_all_orderings@add_col_fk_uq_ix_postgres.snap  vespertide_query__builder__tests__add_column_with_fk_unique_index_all_orderings@add_col_fk_uq_ix_sqlite.snap  vespertide_query__builder__tests__add_column_with_fk_unique_index_all_orderings@add_col_ix_fk_uq_mysql.snap  vespertide_query__builder__tests__add_column_with_fk_unique_index_all_orderings@add_col_ix_fk_uq_postgres.snap  vespertide_query__builder__tests__add_column_with_fk_unique_index_all_orderings@add_col_ix_fk_uq_sqlite.snap  (+114 more)
crates/vespertide-query/src/sql/: add_column.rs  add_constraint.rs  mod.rs  (+16 more)
crates/vespertide-query/tests/: composite_unique_test.rs  enum_migration_test.rs  table_prefixed_enum_test.rs
crates/vespertide-schema-gen/: Cargo.toml
crates/vespertide-schema-gen/src/: main.rs
crates/vespertide-schema-gen/tests/: integration_test.rs
crates/vespertide/src/: lib.rs  runtime.rs
examples/app/: Cargo.toml
examples/app/migrations/: 0001_create_user.json  0001_init.json  0001_init.vespertide.json  0002_add_enum.json  0002_create_post.json  0002_enum.json  0003_fix_enum.json
examples/app/models/: article.json  article_user.json  dual.json  dual_rel.json  media.json  triple.json  triple_rel.json  user copy.json  user.json  user_media_role.json
examples/app/src/: main.rs
(+487 files in other folders)
