[workspace]
members = ["crates/*", "examples/app"]
resolver = "2"

[workspace.dependencies]
vespertide-core = { path = "crates/vespertide-core", version = "0.1.0" }
vespertide-config = { path = "crates/vespertide-config", version = "0.1.0" }
vespertide-macro = { path = "crates/vespertide-macro", version = "0.1.0" }
vespertide-planner = { path = "crates/vespertide-planner", version = "0.1.0" }
vespertide-query = { path = "crates/vespertide-query", version = "0.1.0" }
