[workspace]
members = ["crates/*", "examples/app"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/dev-five-git/vespertide"
homepage = "https://github.com/dev-five-git/vespertide"
documentation = "https://docs.rs/vespertide"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[workspace.dependencies]
vespertide-core = { path = "crates/vespertide-core",  default-features = false }
vespertide-config = { path = "crates/vespertide-config", default-features = false }
vespertide-loader = { path = "crates/vespertide-loader", default-features = false }
vespertide-macro = { path = "crates/vespertide-macro" }
vespertide-naming = { path = "crates/vespertide-naming" }
vespertide-planner = { path = "crates/vespertide-planner" }
vespertide-query = { path = "crates/vespertide-query" }
vespertide-exporter = { path = "crates/vespertide-exporter" }

[profile.dev]
debug = 1  # Line tables only — faster DWARF generation for large codegen output
