[package]
name = "vespertide-cli"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
vespertide-config = { path = "../vespertide-config" }
vespertide-core = { path = "../vespertide-core" }
vespertide-planner = { path = "../vespertide-planner" }
vespertide-query = { path = "../vespertide-query" }

[[bin]]
name = "vespertide"
path = "src/main.rs"
