[package]
name = "vespertide-cli"
version = "0.1.32"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "CLI command for vespertide (model template, diff, SQL, revision, status, log)"
publish = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
colored = "3"
dialoguer = "0.11"
serde_json = "1"
serde_yaml = "0.9"
schemars = "1.1"
vespertide-config = { workspace = true }
vespertide-core = { workspace = true }
vespertide-loader = { workspace = true }
vespertide-planner = { workspace = true }
vespertide-query = { workspace = true }
vespertide-exporter = { workspace = true }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
rstest = "0.26"
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "vespertide"
path = "src/main.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
