[package]
name = "vespertide-config"
version = "0.1.29"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Manages models/migrations directories and naming-case preferences"

[dependencies]
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
schemars = "1.1"

[dev-dependencies]
serde_json = "1"
