[package]
name = "vespertide-core"
version = "0.1.32"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Data models for tables, columns, constraints, indexes, and migration actions"

[dependencies]
serde = { version = "1", features = ["derive"] }
schemars = { version = "1.1" }
thiserror = "2"
vespertide-naming = { workspace = true }

[dev-dependencies]
rstest = "0.26"
serde_json = "1"
