 [package]
 name = "vespertide-exporter"
 version = "0.1.11"
 edition.workspace = true
 license.workspace = true
 repository.workspace = true
 homepage.workspace = true
 documentation.workspace = true
 description = "Export vespertide table definitions into ORM-specific models"

 [dependencies]
 vespertide-core = { workspace = true }
thiserror = "2"

[dev-dependencies]
rstest = "0.26"
insta = { version = "1.44", features = ["yaml"] }
