[package]
name = "vespertide-macro"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Macro entry for runtime migration execution"

[dependencies]
vespertide-core = { workspace = true }
thiserror = "2"
