[package]
name = "vespertide-naming"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Naming conventions and helpers for vespertide database schema management"

[dependencies]
