[package]
name = "vespertide-planner"
version = "0.1.14"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Replays applied migrations to rebuild a baseline, then diffs against current models to compute the next migration plan"

[dependencies]
vespertide-core = { workspace = true }
thiserror = "2"

[dev-dependencies]
rstest = "0.26"
