[package]
name = "vespertide-query"
version = "0.1.5"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Converts migration actions into PostgreSQL SQL statements with bind parameters"

[dependencies]
vespertide-core = { workspace = true }
thiserror = "2"

[dev-dependencies]
rstest = "0.26"
