[package]
name = "vespertide-schema-gen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Emits JSON Schemas for vespertide models and migrations"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
schemars = "1.1"
serde_json = "1"
vespertide-core = { workspace = true }
vespertide-config = { workspace = true }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

