[package]
name = "vespertide"
version = "0.1.45"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Rust workspace for defining database schemas in JSON and generating migration plans and SQL from model diffs"

[dependencies]
vespertide-macro = { workspace = true }
vespertide-core = { workspace = true }
