[package]
name = "app"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
vespertide = { path = "../../crates/vespertide" }
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "2.0.0-rc.21", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
anyhow = "1"
